[gd_scene load_steps=2 format=3 uid="uid://4075yo46e0ln"]

[ext_resource type="Script" path="res://partial/inventory_modal.gd" id="1_x7fj6"]

[node name="InventoryModal" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7fj6")

[node name="Inventiry" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 183.0
offset_right = 928.0
offset_bottom = 453.0
color = Color(0.318095, 0.450697, 0.597019, 1)

[node name="ItemBox" type="GridContainer" parent="Inventiry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.5
offset_top = -130.0
offset_right = 332.5
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Info" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 453.0
offset_right = 731.0
offset_bottom = 536.0
color = Color(0.713203, 0.000403913, 0.716983, 1)

[node name="InfoBox" type="VBoxContainer" parent="Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Info/InfoBox"]
layout_mode = 2

[node name="Description" type="Label" parent="Info/InfoBox"]
custom_minimum_size = Vector2(475, 56)
layout_mode = 2
autowrap_mode = 3

[node name="Action" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 453.0
offset_right = 928.0
offset_bottom = 536.0
color = Color(0.719585, 0.705418, 0, 1)

[node name="ActionBox" type="VBoxContainer" parent="Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
